--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://developer:developer@atlascluster.r2g1ftc.mongodb.net/runo?retryWrites=true&w=majority
 PORT=5000
+NO_OF_DAYS=30
