--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cron": "^3.3.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "jest": "^29.7.0",
     "mongoose": "^8.9.1",
-    "node-cron": "^3.0.3",
-    "supertest": "^7.0.0"
+    "node-cron": "^3.0.3"
   }
 }
